Refactor how the offline jar is created, SDL hashes are included in online jar; they are checked before loading natives for an extra security check.